--- a/DM2025-Lab1-Master.ipynb
+++ b/DM2025-Lab1-Master.ipynb
@@ -3162,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3193,14 +3193,23 @@
     "    return (num // 100 + drift ) * 100\n",
     "\n",
     "\n",
-    "# X.category_name.value_counts().plot(kind = 'bar',\n",
-    "#                                     title = 'Category distribution',\n",
-    "#                                     ylim = [0,_hundreds(max(X.category_name.value_counts()))],        \n",
-    "#                                     rot = 0, fontsize = 11, figsize = (8,3))\n",
+    "X.category_name.value_counts().plot(kind = 'bar',\n",
+    "                                    title = 'Category distribution',\n",
+    "                                    ylim = [0,_hundreds(max(X.category_name.value_counts()))],        \n",
+    "                                    rot = 0, fontsize = 11, figsize = (8,3))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_sample.category_name.value_counts().plot(kind = 'bar',\n",
     "                                           title = 'Category distribution',\n",
     "                                           ylim = [0,_hundreds(max(X_sample.category_name.value_counts()))],\n",
-    "                                           rot = 0, fontsize = 12, figsize = (8,3))\n"
+    "                                           rot = 0, fontsize = 12, figsize = (8,3))"
    ]
   },
   {
@@ -7805,7 +7814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
